# BatchCrop

./: .editorconfig  BatchCrop.code-workspace  CMakeLists.txt  README.md
src/: BatchCrop.cpp
src/common/: PopupManager.cpp  PopupManager.hpp  events.cpp  events.hpp
src/components/: CropOptPanel.cpp  CropOptPanel.hpp  FilePanel.cpp  FilePanel.hpp  FolderPicker.cpp  FolderPicker.hpp  NotificationPopup.cpp  NotificationPopup.hpp  PictureFrame.cpp  PictureFrame.hpp  wxToggleButton.cpp  wxToggleButton.hpp
src/utils/: enums.hpp  events.cpp  events.hpp
